...

            HStack {
                Button("Start authorizing \(Image(systemName: "lock"))") {
                    store.send(.beginOAuth)
                }
                    .disabled(store.state.oauthState == .completed)
                    .accessibilityLabel("Start OAuth")
                if store.state.oauthState == .completed {
                    Button("Reauthorize \(Image(systemName: "lock.rotation"))") {
                        store.send(.beginOAuth)
                    }
                    .accessibilityLabel("Restart OAuth")
                }
                NextTabButton()
            }

        }
        .buttonStyle(RedditweaksButtonStyle())
...
